--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mpbf",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "a fork of pbf, the low-level, lightweight protocol buffer implementation in JavaScript, but built for ESM-based projects",
   "main": "index.js",
   "unpkg": "dist/mpbf.js",
@@ -8,13 +8,14 @@
   "scripts": {
     "build": "mkdirp dist && uglifyjs index.js -c -m -o dist/mpbf.js"
   },
+  "type": "module",
   "files": [
     "bin",
     "dist",
     "compile.js"
   ],
   "bin": {
-    "mpbf": "bin/mpbf"
+    "mpbf": "bin/mpbf.cjs"
   },
   "repository": {
     "type": "git",
